# contrarianAI

./: .gitignore  .mcp.json  admin.js  diary.md  package-lock.json  package.json  render.yaml  server.js
.claude/: CLAUDE.md
docs/: 30-sec-pitch.md  action-queue.md  positioning.md  service_catalog.md  source_articles.md
docs/articles/: tds-2026-langchain-rag-audit-v1.md
docs/outreach/: 2026-04-23-rapid-audit-sku.md  2026-04-23-reddit-hunt.md  2026-04-23-reddit-status.md  2026-04-23-reddit-tier0.md  2026-04-23-replies.md  2026-04-24-linkedin-profile-update.md  2026-04-25-action-plan.md  2026-04-27-teardown-launch.md
landing/: answers.html  assessment.html  bell-tuning-rapid-audit.html  dashboard.html  index.html  lead-intel.html  payment-success.html  questions.html  robots.txt  sitemap.xml
landing/bell-tuning/: index.html
templates/: linkedin_post_bell_tuning.md  linkedin_post_context_inspector.md  linkedin_post_manifesto.md  linkedin_posts.md
tools/: ai_production_readiness_self_assessment.md  lookup-founder.py
tools/context-conductor/: .gitignore  README.md  pyproject.toml
tools/context-conductor/context_conductor/: __init__.py  config.py  executive.py  pathology_gate.py  pool.py  posterior.py  selector.py
tools/context-conductor/context_conductor/adapters/: __init__.py  langchain.py  llamaindex.py  mcp_sensors.py  raw.py
tools/context-conductor/docs/: whitepaper.md
tools/context-conductor/sim/: policies.py  runner.py  sweep.py
tools/context-conductor/sim/scenarios/: __init__.py
tools/context-conductor/tests/: test_posterior.py
(+157 files in other folders)
